Agregando css a la barra de navegación.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="img/gg.png" alt="Logo">
-            <a href="index.html">Inicio</a>
-            <a href="#la-empresa">Empresa</a>
-            <a href="productos.html">Productos</a>
-            <a href="registro.html">Registro</a>
-            <a href="mi-cuenta.html">Mi cuenta</a>
-            <a href="#contacto">Contacto</a>
+        <nav id="barradenavegacion">
+            <img id="logo" src="img/gg.png" alt="Logo">
+            <a href="index.html" class="barra">Inicio</a>
+            <a href="#la-empresa" class="barra">Empresa</a>
+            <a href="productos.html" class="barra">Productos</a>
+            <a href="registro.html" class="barra">Registro</a>
+            <a href="mi-cuenta.html" class="barra">Mi cuenta</a>
+            <a href="#contacto" class="barra">Contacto</a>
         </nav>
     </header>
     
@@ -27,7 +27,7 @@
     <div><em>Videojuevos más vendidos en los últimos 30 días</em></div>
     <ol>
         <li>Resident Evil 4 Remake</li>
-        <img src="img/resident-evil-4-remake.jpg" alt="Resident Evil 4 Remake">
+        <img class="juegosps4" class="cajajuegos" src="img/resident-evil-4-remake.jpg" alt="Resident Evil 4 Remake">
         <li>Elden Ring</li>
         <img src="img/elden-ring.jpg" alt="Elden Ring">
         <li>Dead Island 2</li>
