Cambios en la información de la empresa.

--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 <body>
     <header>
-        <nav id="barradenavegacion">
-            <img id="logo" src="img/gg.png" alt="Logo">
-            <a href="index.html" class="barra">Inicio</a>
-            <a href="#la-empresa" class="barra">Empresa</a>
-            <a href="productos.html" class="barra">Productos</a>
-            <a href="registro.html" class="barra">Registro</a>
-            <a href="mi-cuenta.html" class="barra">Mi cuenta</a>
-            <a href="#contacto" class="barra">Contacto</a>
+        <nav>
+            <img src="img/gg.png" alt="Logo">
+            <a href="index.html">Inicio</a>
+            <a href="#la-empresa">Empresa</a>
+            <a href="productos.html">Productos</a>
+            <a href="registro.html">Registro</a>
+            <a href="mi-cuenta.html">Mi cuenta</a>
+            <a href="#contacto">Contacto</a>
         </nav>
     </header>
     
     <h1 id="la-empresa">La empresa</h1>
-    <p><strong>Goat Games</strong> es un emprendimiento desarrollado <mark>entre amigos.</mark></p><hr>
+    <p><strong>Goat Games</strong> es una tienda de <mark>videojuegos para consolas PlayStation,</mark><br>aunque en un futuro también se venderán videojuegos para otras consolas y otros tipos de productos.</p><hr>
     <h2>Videojuegos</h2>
     
     <div><em>Videojuevos más vendidos en los últimos 30 días</em></div>
     <ol>
         <li>Resident Evil 4 Remake</li>
-        <img class="juegosps4" class="cajajuegos" src="img/resident-evil-4-remake.jpg" alt="Resident Evil 4 Remake">
+        <img src="img/resident-evil-4-remake.jpg" alt="Resident Evil 4 Remake">
         <li>Elden Ring</li>
         <img src="img/elden-ring.jpg" alt="Elden Ring">
         <li>Dead Island 2</li>
@@ -43,7 +43,7 @@
         <img src="img/Grand-Theft-Auto-V-Premium-Edition.jpg" alt="Grand Theft Auto V Premium Edition">
         <li>Elden Ring</li>
         <img src="img/elden-ring.jpg" alt="Elden Ring">
-    </ul><br><hr>
+    </ul><hr>
 
     <h3 id="contacto">Contacto</h3>
     <form action="" method="get">
